--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,10 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".Calendar">
+        </activity>
+        <activity android:name=".LoginPage">
+        </activity>
         <activity android:name=".OrgnzrMainPage">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
