--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,11 @@
             android:roundIcon="@mipmap/ic_launcher_round"
             android:supportsRtl="true"
             android:theme="@style/AppTheme">
+        <activity android:name=".Appointment">
+        </activity>
         <activity android:name=".DayView">
         </activity>
-        <activity android:name=".Calendar">
+        <activity android:name=".CalendarActivity">
         </activity>
         <activity android:name=".LoginPage">
         </activity>
